samples/_failures_safe/1761159763_c422b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_856eb15d.c: In function ‘main’:
./samples/SAFE/__tmp_856eb15d.c:191: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_856eb15d.c:190:5: error: expected declaration or statement at end of input
  190 |     if
      |     ^~
